<resources>
    <string name="app_name">Exchange of books</string>
    <!-- Night || Light Mode-->
    <!--DO NOT Remove or Change string name, else you gotta change it in every activity. -->
    <string name="mode">ni</string>
    <!-- End of Night || Light Mode-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Chat Fragment -->
    <string name="friends_title">Friends</string>

    <!-- User Posts Fragment -->
    <string name="Drag_Delete">Drag to delete</string>

    <!-- Friends items Fragment -->
    <string name="Remove_Friend">Remove Friend</string>
    <string name="delete_req">Delete</string>
    <string name="accept_req">Accept</string>
    <!-- Comments Activity -->
    <string name="comments_c">Comments</string>

    <!-- Login Activity -->
    <string name="FillFields_L">Fill All Fields, please</string>
    <string name="Loading_L">Loading 😊</string>
    <string name="LoggingIn_L">Logging in</string>

    <string name="login_l">Login</string>
    <string name="password_l">Password</string>
    <string name="email_l">Email</string>
    <string name="new_l">New here?</string>
    <!-- Post Activity -->
    <string name="FillFields_P">Fill All Fields, please</string>
    <string name="book_category_p">Book Category *</string>
    <string name="post_text_p">Post Text *</string>
    <string name="post_image_p">Post Image *</string>
    <string name="upload_image_p">Upload Image</string>
    <string name="camera_p">Camera</string>
    <string name="get_book_pos">Get This Book</string>
    <string name="post_menupos">Post</string>

    <!-- Profile Activity -->
    <string name="alreadyFriends">You are already friends</string>
    <string name="rep_profile">Reputation</string>
    <string name="posts_no_prof">Posts #</string>
    <string name="post_views">Views</string>
    <!--<string name="books_prof">Books</string> -->
    <string name="posts_prof">Posts</string>
    <string name="username_prof">Username</string>
    <!-- Register Activity -->
    <string name="chooseImg_R">Please choose a profile image</string>
    <string name="Registering_R">Registering New User</string>
    <string name="password_R">Password</string>
    <string name="email_R">Email</string>
    <string name="register_R">Register</string>
    <string name="select_photo_R">SELECT PHOTO</string>
    <string name="username_R">Username</string>
    <string name="have_Account_R">Have an Account?</string>
    <!-- Chat -->
    <string name="message_chatlog">Write a message</string>
    <!-- Comments -->
    <string name="post_c">Send</string>
    <string name="publish_comment">Add a comment</string>
    <!-- Navigation Bar-->
    <string name="home_nav">Home</string>
    <string name="posts_nav">Posts</string>
    <string name="chat_nav">Chat</string>
    <string name="settings_nav">Settings</string>
    <!-- Menu-->
    <string name="sign_out_menu">Sign Out</string>
    <string name="settings_menu">Settings</string>
    <string name="search_menu">Search</string>
    <!-- FAQ ACTIVITY-->
    <array name="FAQ">
        <item>Trading &amp; Buying Books</item>
        <item>Can I deactivate or delete my account?</item>
        <item>What Information do I need to provide when placing a book to trade?</item>
        <item>Can Books Exchange protect me from being spammed?</item>
        <item>How can I block a user?</item>
        <item>Is Books Exchange available on other platforms?</item>
        <item>is Books Exchange available in other countries?</item>
        <item>How do I share my location in messages?</item>
        <item>Does this app have in-app ads?</item>

    </array>
    <array name="FRN">
        <item>You place your post, people see it, they contact you and try to come to an
            agreement.
        </item>
        <item>No, we are working on it.</item>
        <item>Your city, usually. It is up to you whether you want to give your phone number or
            not.
        </item>
        <item>No, we offer no guarantee.</item>
        <item>You currently cannot block a user.</item>
        <item>Books Exchange is currently not available at any other platforms.</item>
        <item>Books exchange is only supported in HKJ.</item>
        <item>You cannot share your location via messages.</item>
        <item>No, this app is not monetized.</item>


    </array>

    <array name="book_category">
        <!-- Books used in school -->
        <item>Math</item>
        <item>Computer Science</item>
        <item>Religion</item>
        <item>Social Science</item>
        <item>Language and literature</item>
        <item>Natural Science</item>
        <item>History</item>
        <item>Self-Improvement</item>
        <!-- Novels -->
        <item>Philosophical</item>
        <item>Romance</item>
        <item>Fiction</item>
        <item>Realistic Fiction</item>
    </array>
    <array name="jordan_major_cities">
        <!-- Governorates of Jordan -->
        <item>Irbid</item>
        <item>Ajloun</item>
        <item>Jarash</item>
        <item>Mafraq</item>
        <item>Balqa</item>
        <item>Amman</item>
        <item>Zarqa</item>
        <item>Madaba</item>
        <item>Karak</item>
        <item>Tafilah</item>
        <item>Ma\'an</item>
        <item>Aqaba</item>
    </array>
</resources>
