<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="@string/home_nav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_home"       />
    <item
        android:id="@+id/b2"
        android:title="@string/posts_nav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_post"        />

    <item
        android:id="@+id/b3"
        app:showAsAction="ifRoom"
        android:title="@string/chat_nav"
        android:icon="@drawable/ic_action_chat"        />

    <item
        android:id="@+id/b4"
        app:showAsAction="ifRoom"
        android:title="@string/settings_nav"
        android:icon="@drawable/ic_action_settings"        />

</menu>