<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sign_out"
        android:icon="@drawable/ic_action_signout"
        android:iconTint="@color/white"
        android:title="@string/sign_out_menu"
        app:showAsAction="always" />
    <item
        android:id="@+id/settings_btn"
        android:icon="@drawable/ic_action_settings"
        android:iconTint="@color/white"
        android:title="@string/settings_menu"
        app:showAsAction="always" />

    <item
        android:title="@string/search_menu"
        android:id="@+id/search_btn"
        android:icon="@drawable/ic_action_search"
        android:iconTint="@color/white"
        app:showAsAction="always" />

</menu>